# fanservice

./: Cargo.toml  config.ron  gray.ron  rainbow.ron  rotation.ron  rotation2.ron  rotation3.ron  spin.ron  temperature_cool.ron  temperature_overlay.ron  temperature_warm.ron  warm_base.ron  warm_overlay.ron
src/: color.rs  corsair.rs  device.rs  effect.rs  main.rs  profile.rs  profile_manager.rs
